applications/pihole/pihole-dns-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-external
  namespace: pihole
spec:
  selector:
    app: pihole
  type: LoadBalancer
  ports:
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
  externalTrafficPolicy: Local
